--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       </div>
 
       <div class="grid-item3">
-        <img src="https://www.proxi.id/images/service-4.svg" />
+        <img
+          src="https://www.proxi.id/images/service-4.svg"
+          alt="authentication"
+        />
         <h3>How we authenticate users</h3>
         <div class="focus-content">
           <p>
