--- a/login.html
+++ b/login.html
@@ -52,9 +52,11 @@
         <p>Alternative Login Methods:</p>
         <img
           src="https://developer.apple.com/design/human-interface-guidelines/sign-in-with-apple/images/apple-id-sign-in-with_2x.png"
+          alt="apple"
         />
         <img
           src="https://www.oncrashreboot.com/images/create-apple-google-signin-buttons-quick-dirty-way-google.png"
+          alt="google"
         />
       </div>
       <div class="grid-item3-login">
