--- a/signup.html
+++ b/signup.html
@@ -59,8 +59,8 @@
         <p>Alternative Signup Methods:</p>
         <img
           src="https://developer.apple.com/design/human-interface-guidelines/sign-in-with-apple/images/apple-id-sign-up-with_2x.png"
-        />
-        <img class="google" src="https://i.imgur.com/yczPzHD.png" />
+        alt="apple"/>
+        <img class="google" src="https://i.imgur.com/yczPzHD.png" alt="apple"/>
       </div>
       <div class="grid-item3-signup">
           <p> Already have an account? Log in <a class="signupButton" href="/login.html">here.</a>
