--- a/myProfile.html
+++ b/myProfile.html
@@ -19,7 +19,7 @@
     </header>
     <nav>
       <a href="/index.html">Log out</a>
-      <a href="/feed">Feed</a>
+      <a href="/feed.html">Feed</a>
     </nav>
 
     <div class="profile-info-container">
